--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<title>ctheisen</title>
+		<script>window.location.replace('https://www.christheisen.com')</script>
 	</head>
 	<body>
-		Under construction. Come back in a few months.
+		Page moved to <a href='www.christheisen.com'>www.christheisen.com</a>.
 	</body>
-
 </html>
