--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 		<script>window.location.replace('https://www.christheisen.com')</script>
 	</head>
 	<body>
-		Page moved to <a href='www.christheisen.com'>www.christheisen.com</a>.
+		Page moved to <a href='https://www.christheisen.com/'>www.christheisen.com</a>.
 	</body>
 </html>
